--- a/maths/templates/basic_operations.html
+++ b/maths/templates/basic_operations.html
@@ -38,7 +38,7 @@
         </div>
 
         <div class="mt-8 text-center">
-            <a href="{% url 'home' %}" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Back to Problems</a>
+            <a href="{% url 'problems' %}" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Back to Problems</a>
         </div>
     </div>
 
