--- a/maths/templates/measurements.html
+++ b/maths/templates/measurements.html
@@ -33,7 +33,7 @@
         </div>
 
         <div class="mt-8 text-center">
-            <a href="{% url 'home' %}" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">Back to Problems</a>
+            <a href="{% url 'problems' %}" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">Back to Problems</a>
         </div>
     </div>
 
