--- a/maths/templates/time.html
+++ b/maths/templates/time.html
@@ -32,7 +32,7 @@
         </div>
 
         <div class="mt-8 text-center">
-            <a href="{% url 'home' %}" class="bg-purple-500 text-white px-4 py-2 rounded hover:bg-purple-600">Back to Problems</a>
+            <a href="{% url 'problems' %}" class="bg-purple-500 text-white px-4 py-2 rounded hover:bg-purple-600">Back to Problems</a>
         </div>
     </div>
 
