--- a/maths/templates/base.html
+++ b/maths/templates/base.html
@@ -29,8 +29,10 @@
             <div>
                 <a href="/" class="px-4 py-2 rounded hover:bg-blue-700 hover:text-white">Home</a>
                 <a href="{% url 'problems' %}" class="px-4 py-2 rounded hover:bg-blue-700 hover:text-white">Problems</a>
+              
                 {% if user.is_authenticated %}
                     <!-- <a href="#" class="px-4 py-2 rounded hover:bg-blue-700 hover:text-white">Dashboard</a> -->
+                    <a href="{% url 'records' %}" class="px-4 py-2 rounded hover:bg-blue-700 hover:text-white">Records</a>
                     <a href="{% url 'logout' %}" class="bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Logout</a>
                 {% else %}
                     <a href="{% url 'login' %}" class="bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Login</a>
