--- a/maths/templates/basic_operations.html
+++ b/maths/templates/basic_operations.html
@@ -126,13 +126,14 @@
         });
 
         function submitScore(score, totalQuestions) {
+            const slug = 'basic-operations'
             fetch("{% url 'submit_score' %}", {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
                     'X-CSRFToken': '{{ csrf_token }}'
                 },
-                body: JSON.stringify({ score: score, totalQuestions: totalQuestions })
+                body: JSON.stringify({ score: score, totalQuestions: totalQuestions,slug: slug   })
             })
             .then(response => {
                 if (!response.ok) {
